# img2imgAdvDef

./: .gitignore  CITATION.bib  LICENSE  README.md  UPLOAD_MANIFEST.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: implementation_notes.md
scripts/: evaluate.py  inspect_data.py  run_smoke_test.py  train.py
src/pix2pix_defense/: __init__.py  datasets.py  evaluate.py  metrics.py  models.py  train.py  utils.py
tests/: conftest.py  test_smoke.py
