[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pix2pix-defense"
version = "0.1.0"
description = "Residual pix2pix adversarial-image reconstruction defense in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=9.5",
  "PyYAML>=6.0",
  "torch>=2.1",
  "torchvision>=0.16",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["._*", ".venv"]
